# readcli

./: .gitignore  README.md  article.html.j2  gtasks.py  pyproject.toml  readcli  readcli.py  settings.cfg.example
tests/: test_scrape2.py
xpi/: README.md  update.sh
